# target-sharepoint-onedrive

./: LICENSE  README.md  config_sample.json  config_sample_onedrive.json  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
target_sharepoint_onedrive/: __init__.py  __main__.py  ms_graph_client.py  sinks.py  target.py
tests/: __init__.py  test_config.json  test_core.py  test_sharepoint_client.py  test_sinks.py  test_target_config.py
