[project]
name = "target-sharepoint-onedrive"
version = "0.0.1"
description = "Singer target for SharePoint Document Libraries and OneDrive, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Chad Campling", email = "chad.campling@opteonsolutions.com" }]
keywords = [
    "ELT",
    "SharePoint",
    "Microsoft Graph",
    "CSV",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    "singer-sdk[faker]~=0.47.4",
    "requests~=2.32.3",
    "azure-identity~=1.15.0",
    "pandas~=2.1.0",
    "python-dateutil~=2.8.2",
]

[project.optional-dependencies]
s3 = [
    "s3fs~=2025.5.0",
]

[project.scripts]
# CLI declaration
target-sharepoint-onedrive = 'target_sharepoint_onedrive.target:TargetSharePointOneDrive.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "pytest-cov>=6.2.1",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.16.0",
    "types-requests",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"

# This configuration can be used to customize tox tests as well as other test frameworks like flake8 and mypy
[tool.tox]
min_version = "4.22"
requires = [
    "tox>=4.22",
    "tox-uv",
]
env_list = [
    "typing",
    "py313",
    "py312",
    "py311",
    "py310",
    "py39",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "GITHUB_*",
    "TARGET_SHAREPOINT_ONEDRIVE_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "test", "typing" ]
commands = [ [ "mypy", { replace = "posargs", default = [ "target_sharepoint_onedrive", "tests" ], extend = true } ] ]
